@@ -1,3 +1,4 @@
+	* fixed python bindings build with disabled DHT support
 	* fixed BSD file allocation issue
 	* fixed bug in session::delete_files option to remove_torrent
 
